GS-12456 ESP Redesign: Front-End for Official Info Page - corrected OSP table striping on IE7 and IE8.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -7639,6 +7639,11 @@ ul.schoolList div p {
     background-color: #f9eccd;
 }
 
+.slStylesV1-0 .even th,
+.slStylesV1-0 .even td {
+    background-color: #f1f1f1;
+}
+
 .even .cs_gsRating .badge_sm_na {
     background-position: -500px 0;
 }
